--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,12 @@
+ADMIN_EMAIL=admin@example.com
+
 NODE_ENV=development
 NODE_PORT=8080
 
+JWT_ISSUER=
+JWT_EXPIRES_IN=6h
+
 DATABASE_HOST=
-DATABASE_PORT=
 DATABASE_USER=
 DATABASE_PASSWORD=
 DATABASE_DATABASE=
